# visual-computer-uefs

./: .gitignore  pyproject.toml
atividade01/: atividade01.py
atividade02/: atividade02.py
lab01/: exercicio1.py  exercicio2.py  exercicio3.py  lab01.py
lab02/: exercicio1.py  exercicio2.py  exercicio3.py  lab02.py
lab04/: lab04.py  lab04_explicacao.py
utils/: image.py
